Started work on getting return from weaviate into an object for 'whatever' this is I'm trying to build.  50/50 vibed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 activity_data_SITE.json
 /.idea/
 system_prompt.txt
+/CLAUDE.md
+/activity_data_SITE_withid.json
+/example_activity_data_SITE_withid.json
+/example_system_prompt.txt
